2003-10-08  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-client.c: set better error m,essages on the
	E_CALENDAR_CHECK_STATUS macro.
	(cal_client_get_error_message): new function.

	* cal-client/cal-client.h: added new prototype.

	* gui/dialogs/comp-editor.c (save_comp): use the GError argument
	for the cal_client_create/_modify_object calls, and display the
	error message coming from the backend.

	* gui/comp-util.c (cal_comp_is_on_server): likewise.

2003-10-07  Dan Winship  <danw@ximian.com>

	* idl/evolution-calendar.idl (getDefaultObject): Remove the "type"
	arg; the backend knows what type it is

	* pcs/cal.c (impl_Cal_getDefaultObject): Likewise

	* pcs/cal-backend.c (cal_backend_get_default_object): Likewise

	* pcs/cal-backend-sync.c (cal_backend_sync_get_default_object,
	_cal_backend_get_default_object): Likewise

	* pcs/cal-backend-file.c (cal_backend_file_get_default_object):
	Likewise. (Use cal_backend_get_kind() instead.)

	* cal-client/cal-client.c (cal_client_get_default_object):
	Likewise

	* gui/comp-util.c (cal_comp_event_new_with_defaults,
	cal_comp_task_new_with_defaults): Update calls to
	cal_client_get_default_object().

	* pcs/cal-backend-sync.c (_cal_backend_get_static_capabilities):
	Use the right cal notification

2003-10-07  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (e_cal_model_create_component_with_defaults):
	dont clone NULL icalcomponent's.

2003-10-07  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (e_cal_model_get_default_client): make sure we
	always return a default client, if possible, since we rely on having
	a default client in many places.

	* gui/e-day-view.c (e_day_view_do_key_press): dont create event if
	e_cal_model_create_component_with_defaults returns NULL.

	* gui/e-week-view.c (e_week_view_do_key_press): dont create event if
	e_cal_model_create_component_with_defaults returns NULL.
	
2003-10-06  Rodrigo Moya <rodrigo@ximian.com>
