@@ -1,5 +1,14 @@
 2003-10-08  Rodrigo Moya <rodrigo@ximian.com>
 
+	* cal-client/cal-client.c (cal_client_is_read_only): fixed
+	documentation comments.
+
+	* gui/calendar-commands.c (sensitize_calendar_commands): figure
+	out read-only menu items to disable based on the currently
+	selected object's CalClient.
+
+2003-10-08  Rodrigo Moya <rodrigo@ximian.com>
+
 	* cal-client/cal-client.c: set better error m,essages on the
 	E_CALENDAR_CHECK_STATUS macro.
 	(cal_client_get_error_message): new function.
